--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
     "electron": "^18.0.4",
+    "electron-ipcrenderer-websocket": "0.1.0-0",
     "path": "^0.12.7",
     "python-shell": "^3.0.1",
     "react": "^18.0.0",
