--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ramonak/react-progress-bar": "^4.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -10,10 +11,13 @@
     "cross-env": "^7.0.3",
     "electron": "^18.0.4",
     "electron-ipcrenderer-websocket": "0.1.0-0",
+    "loading-animations-react": "^1.3.3",
     "path": "^0.12.7",
     "python-shell": "^3.0.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "wait-on": "^6.0.1",
     "web-vitals": "^2.1.4"
@@ -46,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-vis-network-graph": "^3.0.1"
   }
 }
