--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
     "@ramonak/react-progress-bar": "^4.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -11,14 +16,19 @@
     "cross-env": "^7.0.3",
     "electron": "^18.0.4",
     "electron-ipcrenderer-websocket": "0.1.0-0",
+    "hamburger-react": "^2.5.0",
     "loading-animations-react": "^1.3.3",
     "path": "^0.12.7",
     "python-shell": "^3.0.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
+    "react-burger-menu": "^3.0.8",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-vis": "^1.11.7",
+    "styled-components": "^5.3.5",
     "wait-on": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
