--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@electron/remote": "^2.0.9",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
@@ -14,8 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
-    "electron": "^18.0.4",
+    "electron": "^24.1.3",
+    "electron-builder": "^23.6.0",
     "electron-ipcrenderer-websocket": "0.1.0-0",
+    "electron-is-dev": "^2.0.0",
     "hamburger-react": "^2.5.0",
     "loading-animations-react": "^1.3.3",
     "path": "^0.12.7",
@@ -25,6 +28,7 @@
     "react-burger-menu": "^3.0.8",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-vis": "^1.11.7",
@@ -40,8 +44,21 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none npm run start\" \"npm run electron:start\"",
-    "electron:build": "",
+    "electron:build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js",
     "electron:start": "wait-on tcp:3000 && electron ."
+  },
+  "build": {
+    "extends": null,
+    "appId": "com.traffic.analyser.electron-cra",
+    "files": [
+      "dist/**/*",
+      "build/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "eslintConfig": {
     "extends": [
